--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="imagenes/html5.png" alt='Logo HTML5' width="100px" title='Logo HTML5'/>
     <p title='Nuevo párrafo' style='color:red'>
         Este es 
-        nuestro párrafo
+        nuestro párrafo a continuación
     </p>
     <pre>
 Este es 
