--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Elementos Básicos HTML</title>
+    <title>Bienvenidos a la Página de la profe Verónica</title>
 </head>
 <!--<body style="background-color: powderblue;">-->
 <body>    
     <h1 style="color:blue;font-size: 50px;font-family: 'Courier New', Courier, monospace;">Universidad HTML</h1>
+    <p>Esta página fue creada con un editor web de html, además contiene estilos en Css</p>
+    
     <img src="imagenes/html5.png" alt='Logo HTML5' width="100px" title='Logo HTML5'/>
     <p title='Nuevo párrafo' style='color:red'>
         Este es 
