--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <!--<body style="background-color: powderblue;">-->
 <body>    
-    <h1 style="color:blue;font-size: 50px;font-family: 'Courier New', Courier, monospace;">Universidad HTML</h1>
+    <h1 style="color:blue;font-size: 50px;font-family: 'Courier New', Courier, monospace;">Bienvenidos a la Página de la profe Verónica</h1>
     <p>Esta página fue creada con un editor web de html, además contiene estilos en Css</p>
-    
+
     <img src="imagenes/html5.png" alt='Logo HTML5' width="100px" title='Logo HTML5'/>
     <p title='Nuevo párrafo' style='color:red'>
         Este es 
