--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 style="color:blue;font-size: 50px;font-family: 'Courier New', Courier, monospace;">Bienvenidos a la Página de la profe Verónica</h1>
     <h2>Esta página fue creada con un editor web de html, además contiene estilos en css</h2>
     <h3>¿Te gustaría aprender programación gratis?</h3>
-    <h3>Mira estos cursos que son ofrecidos por <a href="https://es.wikipedia.org/wiki/EdX">edX<a></h3>
+    <h3>Mira estos cursos que son ofrecidos por <a href="https://es.wikipedia.org/wiki/EdX" target="_blank">edX<a></h3>
 
 
     <img src="imagenes/html5.png" alt='Logo HTML5' width="100px" title='Logo HTML5'/>
