--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h2>Esta página fue creada con un editor web de html, además contiene estilos en css</h2>
     <h3>¿Te gustaría aprender programación gratis?</h3>
     <h3>Mira estos cursos que son ofrecidos por <a href="https://es.wikipedia.org/wiki/EdX" target="_blank">edX<a></h3>
-
+    <h2>Mira aquí este curso gratis de <a href="https://www.edx.org/es/aprende/desarrollo-web" target="_blank">Desarrollo Web</a></h2>    
+    <h2>Mira aquí este curso gratis de <a href="https://www.edx.org/es/aprende/desarrollo-video-juegos" target="_blank">Desarrollo de Video Juegos</a></h2>    
 
     <img src="imagenes/html5.png" alt='Logo HTML5' width="100px" title='Logo HTML5'/>
     <p title='Nuevo párrafo' style='color:red'>
