--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Mira aquí este curso gratis de <a href="https://www.edx.org/es/aprende/desarrollo-web" target="_blank">Desarrollo Web</a></h2>    
     <h2>Mira aquí este curso gratis de <a href="https://www.edx.org/es/aprende/desarrollo-video-juegos" target="_blank">Desarrollo de Video Juegos</a></h2>    
 
-    <img src="/imagenes/edx.png" alt='Logo EdX' width="200px" title='Logo EdX'/>
+    <img src="imagenes/edx.png" alt='Logo EdX' width="200px" title='Logo EdX'/>
     <p title='Nuevo párrafo' style='color:red'>
         Este es 
         nuestro párrafo a continuación
